@@ -27,7 +27,6 @@ import com.thoughtworks.go.server.service.*;
 import com.thoughtworks.go.util.SystemEnvironment;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -46,15 +45,14 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
-import java.util.Arrays;
 import java.util.Base64;
 
 import static com.thoughtworks.go.util.SystemEnvironment.AGENT_EXTRA_PROPERTIES;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Base64.getEncoder;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.*;
 import static org.springframework.http.HttpStatus.CONFLICT;
 
@@ -67,7 +65,6 @@ public class AgentRegistrationControllerTest {
     private AgentRegistrationController controller;
     private SystemEnvironment systemEnvironment;
     private PluginsZip pluginsZip;
-    private File pluginZipFile;
     private EphemeralAutoRegisterKeyService ephemeralAutoRegisterKeyService;
 
     @BeforeEach
@@ -76,7 +73,7 @@ public class AgentRegistrationControllerTest {
         systemEnvironment = mock(SystemEnvironment.class);
         goConfigService = mock(GoConfigService.class);
         ephemeralAutoRegisterKeyService = mock(EphemeralAutoRegisterKeyService.class);
-        pluginZipFile = Files.createFile(temporaryFolder.resolve("plugins.zip")).toFile();
+        File pluginZipFile = Files.createFile(temporaryFolder.resolve("plugins.zip")).toFile();
         FileUtils.writeStringToFile(pluginZipFile, "content", UTF_8);
         when(systemEnvironment.get(SystemEnvironment.ALL_PLUGINS_ZIP_PATH)).thenReturn(pluginZipFile.getAbsolutePath());
         when(systemEnvironment.get(AGENT_EXTRA_PROPERTIES)).thenReturn("");
@@ -206,7 +203,7 @@ public class AgentRegistrationControllerTest {
             assertEquals(DigestUtils.md5Hex(stream), response.getHeader("Content-MD5"));
         }
         try (InputStream is = JarDetector.createFromRelativeDefaultFile(systemEnvironment, "agent.jar").invoke()) {
-            assertTrue(Arrays.equals(IOUtils.toByteArray(is), response.getContentAsByteArray()));
+            assertArrayEquals(is.readAllBytes(), response.getContentAsByteArray());
         }
     }
 
@@ -244,7 +241,7 @@ public class AgentRegistrationControllerTest {
             assertEquals(DigestUtils.md5Hex(stream), response.getHeader("Content-MD5"));
         }
         try (InputStream is = JarDetector.createFromRelativeDefaultFile(systemEnvironment, "agent-launcher.jar").invoke()) {
-            assertTrue(Arrays.equals(IOUtils.toByteArray(is), response.getContentAsByteArray()));
+            assertArrayEquals(is.readAllBytes(), response.getContentAsByteArray());
         }
     }
 
@@ -285,7 +282,7 @@ public class AgentRegistrationControllerTest {
             assertEquals(DigestUtils.md5Hex(stream), response.getHeader("Content-MD5"));
         }
         try (InputStream is = JarDetector.tfsJar(systemEnvironment).getJarURL().openStream()) {
-            assertTrue(Arrays.equals(IOUtils.toByteArray(is), response.getContentAsByteArray()));
+            assertArrayEquals(is.readAllBytes(), response.getContentAsByteArray());
         }
     }
 
